--- a/weekly-server-0.1/client/web/index.html
+++ b/weekly-server-0.1/client/web/index.html
@@ -6,10 +6,25 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="스타트업 소식 및 정보를 한눈에">
+    <meta name="keywords" content=" 스타트업, 스타트업 소식, startup, company, 행사, 지원사업, 스타트업 위클리, 위클리, weekly, startup weekly">
+    
+    <meta name="twitter:image:src" content="http://glance.media/email_service_logo.png">
+    <meta name="twitter:description" content="스타트업 소식 및 정보를 한눈에">
+    <meta name="twitter:title" content="STARTUP WEEKLY">
+    <meta name="twitter:card" content="summary_large_image">
+    
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="STARTUP WEEKLY">
+    <meta property="og:site_name" content="STARTUP WEEKLY">
+    <meta property="og:description" content="스타트업 소식 및 정보를 한눈에">
+    <meta property="og:image" content="http://glance.media/email_service_logo.png">
+
+
     <base href="/"></base>
-    <title>Startup Weekly</title>
-    <meta name="description" content="Startup Weekly">
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>STARTUP WEEKLY</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />-->    
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
