--- a/weekly-server-0.1/client/web/index.html
+++ b/weekly-server-0.1/client/web/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="description" content="스타트업 소식 및 정보를 한눈에">
     <meta name="keywords" content=" 스타트업, 스타트업 소식, startup, company, 행사, 지원사업, 스타트업 위클리, 위클리, weekly, startup weekly">
     
@@ -54,7 +54,7 @@
       <link rel="stylesheet" href="components/modal/modal.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="testApp" class="{{$state.current.data.specialClass}} fixed-navbar">
+  <body ng-app="testApp" class="{{$state.current.data.specialClass}} fixed-navbar" style="min-width: 1024px !important;">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
