--- a/weekly-server-0.1/client/web/index.html
+++ b/weekly-server-0.1/client/web/index.html
@@ -53,6 +53,8 @@
       <link rel="stylesheet" href="app/person/person.css">
       <link rel="stylesheet" href="components/modal/modal.css">
     <!-- endbuild -->
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>
   </head>
   <body ng-app="testApp" class="{{$state.current.data.specialClass}} fixed-navbar" style="min-width: 1024px !important;">
     <!--[if lt IE 7]>
@@ -113,7 +115,7 @@
       <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/angular-ui-select/dist/select.js"></script>
       <script src="bower_components/moment/locale/ko.js"></script>
-      <script src="bower_components/iCheck/icheck.min.js"></script>
+      <script src="bower_components/iCheck/icheck.min.js"></script>      s      
       <!-- endbower -->
 
           <!-- build:js -->
